# napari-cutie

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
src/napari_cutie/: __init__.py  _reader.py  _widget.py  napari.yaml
src/napari_cutie/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
